@@ -4,6 +4,7 @@ namespace Chamilo\Core\Group\Table\SubscribeUser;
 use Chamilo\Core\User\Storage\DataClass\User;
 use Chamilo\Libraries\Format\Table\Column\DataClassPropertyTableColumn;
 use Chamilo\Libraries\Format\Table\Extension\DataClassTable\DataClassTableColumnModel;
+use Chamilo\Libraries\Format\Table\Interfaces\TableColumnModelActionsColumnSupport;
 
 /**
  * $Id: subscribe_user_browser_table_column_model.class.php 224 2009-11-13 14:40:30Z kariboe $
@@ -13,7 +14,7 @@ use Chamilo\Libraries\Format\Table\Extension\DataClassTable\DataClassTableColumn
 /**
  * Table column model for the user browser table
  */
-class SubscribeUserTableColumnModel extends DataClassTableColumnModel
+class SubscribeUserTableColumnModel extends DataClassTableColumnModel implements TableColumnModelActionsColumnSupport
 {
     const DEFAULT_ORDER_COLUMN_INDEX = 1;
 
